@@ -4,6 +4,10 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [UNRELEASED]
+- Fix bug when configuring cache_key to nil would load MemoryStore by default. It returns NullStore now. This bug only affected users configuring cache_store to nil.
+- Configure cache_keys correctly
+
 ## [2.1.0] - 2021-06-30
 - Add integration with ActionSupport::Cache's stores. As rollouts don't change often, adding a cache can save thousands of calls to the storage. It's possible to configure the same way Rails allows cache_stores to be configured.
 
